updated index.html to add propeller data

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="propeller" content="b7f599533fffd52e650114081cac2dd6">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>San Diego Guide</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6011246882097148"
-     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
