--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-  <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=556764&format=300x250&ga=g"></script>
+  <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=556764&format=300x250&ga=g&bg=1"></script>
 <noscript><a href="https://yllix.com/publishers/556764" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
 
   </html>
