--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>San Diego Guide</title>
   </head>
+  <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=556764&format=728x90&ga=g&bg=1"></script>
+<noscript><a href="https://yllix.com/publishers/556764" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
