--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>San Diego Guide</title>
   </head>
-  <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=556764&format=728x90&ga=g&bg=1"></script>
-<noscript><a href="https://yllix.com/publishers/556764" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  </body>
-  <script type="text/javascript" src="https://udbaa.com/slider.php?section=General&pub=556764&ga=g&side=right&td=1"></script>
-  <script type="text/javascript" src="https://udbaa.com/slider.php?section=General&pub=556764&ga=g&side=right&bg=1&td=2"></script>
-  <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=556764&format=300x250&ga=g&bg=1"></script>
-<noscript><a href="https://yllix.com/publishers/556764" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/300x250.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
 
+    <script type="text/javascript"> var infolinks_pid = 3368561; var infolinks_wsid = 0; </script> 
+    <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+
+  </body>
+  
   </html>
