--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <script src="//servedby.studads.com/ads/ads.php?t=MTU2NjA7OTc4MTtob3Jpem9udGFsLmxlYWRlcmJvYXJk&index=1"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
